5.1. BufferedReader [#252489]